--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<body>
 		<div class="container_main">
 		<div class="container">
-			<img src="img/mlogo.jpg" style="height: 50px" width="50px"><a href="home.html"><button class="btn" style="margin-left: 60px;margin-top: 50px">HOME</button></a>
+			<img src="mlogo.jpg" style="height: 50px" width="50px"><a href="home.html"><button class="btn" style="margin-left: 60px;margin-top: 50px">HOME</button></a>
 		<a href="about.html"><button class="btn">ABOUT</button></a>
 		<a href="blog.html"><button class="btn">BLOG</button></a>
 		<a href="contact.html"><button class="btn">CONTACT</button></a>
@@ -275,4 +275,5 @@
 </div>
 	<div class="footer">All Rights Are Reserved by Adorsho Ghosh</div>	
 	</body>
+
 </html>
